--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ name: Generate Snake
 # Controls when the action will run. This action runs every 6 hours.
 
 on:
+  schedule:
+    - cron: "0 */12 * * *" 
 
 
 # This command allows us to run the Action automatically from the Actions tab.
